objects/ssot__ApplicationTimeline__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationCategory__c</fullName>
        <label>Application Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationCloseDate__c</fullName>
        <label>Application Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationOpenDate__c</fullName>
        <label>Application Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionReleaseDate__c</fullName>
        <label>Decision Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EarlyActionCloseDate__c</fullName>
        <label>Early Action Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EarlyActionOpenDate__c</fullName>
        <label>Early Action Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EarlyApplicationCloseDate__c</fullName>
        <label>Early Application Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EarlyApplicationOpenDate__c</fullName>
        <label>Early Application Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EarlyApplnDecisionRelDate__c</fullName>
        <label>Early Application Decision Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationApplnDeadlineDate__c</fullName>
        <label>Graduation Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Timeline Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>